--- a/Chapter3_Getting_started_with_neural_networks.ipynb
+++ b/Chapter3_Getting_started_with_neural_networks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter3_Getting_started_with_neural_networks.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPRzn5T6+buKXmX2io6Kw4Q",
+      "authorship_tag": "ABX9TyMMhugqMUJ21k/jzJoisPjl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,7 +87,99 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "The fundamental data structure in neural networks is the *layer*, to which you were introduced in chapter 2. A layer is a data-processing module that takes as input one or more tensors and that outputs one or more tensors. Some layers are stateless but more frequently layers have a state: the layer's *weights*, one or several tensors learned with stochastic gradient descent, which together contain the network's *knowledge*. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ytLYJo0ytNiW",
+        "colab_type": "text"
+      },
+      "source": [
+        "Different layers are appropriate for different tensor formats and different types of data processing. For instance, simple vector data, stored in 2D tensors of shape (samples, features), is often processed by *densely connected* layers, also called *fully connected* or *dense* layers. Sequence data, stored in 3D tensors of shape (samples, timesteps, features), is typically processed by *recurrent* layers such as an *LSTM* layer.\n",
+        "Image data, stored in 4D tensor, is usually processed by 2D convolution layers."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WAC1oivFu2Ia",
+        "colab_type": "text"
+      },
+      "source": [
+        "A metaphor for layers is thinking of them as LEGO bricks for deep learning. Building deep-learning models in Keras is done by clipping together compatible layers to form useful data-transformation pipelines. The notion of layer *compatibility* here refers specifically to the fact that every layer will only accept input tensor of a certain shape and will return output tensors of a certain shape. Example: "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7nmdRQQAwA-b",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "from keras import layers\n",
+        "\n",
+        "layer = layers.Dense(32, input_shape=(784,))\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "j4CmDBXfwWyD",
+        "colab_type": "text"
+      },
+      "source": [
+        "We're creating a layer that will only accept as input 2D tensors where the first dimension is 784(axis 0, the batch dimension, is unspecified, and thus any value would be accepted.) This layer will return a tensor where the first dimension has been transformed to be 32."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "i5jLWc8Dw5vI",
+        "colab_type": "text"
+      },
+      "source": [
+        "Thus this layer can only be connected to a downstream layer that expects 32-dimensional vectors as its input. When using Keras, you don't have to worry about compatibility, because the layers you add to your models are dynamically built to match the shape of the incoming layer. For instance, suppose you write the following: "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bYwyIxulyVha",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "from keras import models\n",
+        "from keras import layers\n",
+        "\n",
+        "model = models.Sequential()\n",
+        "model.add(layers.Dense(32, input_shape=(784,)))\n",
+        "model.add(layers.Dense(32))\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gHYc_iOUy-7y",
+        "colab_type": "text"
+      },
+      "source": [
+        "The second layer will automatically infer its input shape as being the the output shape of the layer that came before."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QOTWzMAuzTcJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "#3.1.2 Models: networks of layers"
       ]
     }
   ]
