--- a/Chapter3_Getting_started_with_neural_networks.ipynb
+++ b/Chapter3_Getting_started_with_neural_networks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter3_Getting_started_with_neural_networks.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMMhugqMUJ21k/jzJoisPjl",
+      "authorship_tag": "ABX9TyPuROGuBV7bo+8OYfGu9qlo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -180,6 +180,48 @@
       },
       "source": [
         "#3.1.2 Models: networks of layers"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zceheV1d0Dq2",
+        "colab_type": "text"
+      },
+      "source": [
+        "A deep-learning model is a directed, acyclic graph of layers. The most common instance is a linear stack of layers, mapping a single input to a single output."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ek8rClDZ0c2b",
+        "colab_type": "text"
+      },
+      "source": [
+        "Some broader networks include:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iJGWYNEX0nc9",
+        "colab_type": "text"
+      },
+      "source": [
+        "* Two-branch networks\n",
+        "* Multihead networks\n",
+        "* Inception blocks"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BA5nhR9A0y_Y",
+        "colab_type": "text"
+      },
+      "source": [
+        "The topology of a network defines a *hypothesis space*. You may remember that in chapter 1, we defined machine learning as \"searching for useful representations of some input data, within a predefined space of possibilities, using guidance from a feedback signal\". By choosing a network topology, you constrain your *space of possibilities* (hypothesis space) to a specific series of tensor operations, mapping input data to output data. What you'll then be searching for is a good set of values for the weight tensors involved in these tensor operations."
       ]
     }
   ]
