--- a/Chapter3_Getting_started_with_neural_networks.ipynb
+++ b/Chapter3_Getting_started_with_neural_networks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter3_Getting_started_with_neural_networks.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPuROGuBV7bo+8OYfGu9qlo",
+      "authorship_tag": "ABX9TyPktn5riVz/ONQV/w139/T5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -222,6 +222,75 @@
       },
       "source": [
         "The topology of a network defines a *hypothesis space*. You may remember that in chapter 1, we defined machine learning as \"searching for useful representations of some input data, within a predefined space of possibilities, using guidance from a feedback signal\". By choosing a network topology, you constrain your *space of possibilities* (hypothesis space) to a specific series of tensor operations, mapping input data to output data. What you'll then be searching for is a good set of values for the weight tensors involved in these tensor operations."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y-u7zffa28Pb",
+        "colab_type": "text"
+      },
+      "source": [
+        "#3.1.3 Loss functions and optimizers: keys to configuring the learning process"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rIH40nrY3H4J",
+        "colab_type": "text"
+      },
+      "source": [
+        "Once the network architecture is defined, you still have to choose two more things:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dOWZEQ763R0L",
+        "colab_type": "text"
+      },
+      "source": [
+        "* Loss function (objective function)-- The quantity that will be minimized during training. It represents a measure of success for the task at hand.\n",
+        "* Optimizer--Determines how the network will be updated based on the loss function. It implements a specific variant of stochastic gradient descent(SGD)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zEW1zQ3n31ev",
+        "colab_type": "text"
+      },
+      "source": [
+        "Choosing the right objective function for the right problem is extremely important: your network will take any shortcut it can, to minimize the loss; so if the objective doesn't fully correlate with success for the task at hand your network will end up doing things you may not have wanted. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N1UDh-VV5h0b",
+        "colab_type": "text"
+      },
+      "source": [
+        "Guidelines for chosing the correct loss:\n",
+        "* binary crossentropy\n",
+        "  - two-class classification problem\n",
+        "* categorical crossentropy\n",
+        "  - many-class classification problem\n",
+        "* mean squared error\n",
+        "  - regression problems\n",
+        "* Connectionist temporal classification\n",
+        "  - sequence-learning problem"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WAmTKUn49V_5",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     }
   ]
