--- a/Chapter3_Getting_started_with_neural_networks.ipynb
+++ b/Chapter3_Getting_started_with_neural_networks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter3_Getting_started_with_neural_networks.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPktn5riVz/ONQV/w139/T5",
+      "authorship_tag": "ABX9TyNrT7p8oNimkcNGbbYA2Mv6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -290,7 +290,162 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "#3.2.2 Developing with Keras: a quick overview"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OswH9C7CAR9m",
+        "colab_type": "text"
+      },
+      "source": [
+        "The typical Keras workflow looks like this:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "L3hWIO5uAct9",
+        "colab_type": "text"
+      },
+      "source": [
+        "1. Define your training data: input tensors and target tensors.\n",
+        "2. Define a network of layers (or *model*) that maps your inputs to your targets.\n",
+        "3. Configure the learning process by choosing a loss function, an optimizer, and some metrics to monitor.\n",
+        "4. Iterate on your training data by calling the fit() method of your model."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3HPmQvfRBF3M",
+        "colab_type": "text"
+      },
+      "source": [
+        "There are two ways to define a model: using the *Sequential* class(only for linear stacks of layers, which is the most common architecture) or the *functional* API."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eS5dXKiEEA4e",
+        "colab_type": "text"
+      },
+      "source": [
+        "As a refresher, here's a two-layer model defined using the *Sequential* class (note that we're passing the expected shape of the input data to the first layer):"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GxiMq3HUEY5X",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "from keras import models\n",
+        "from keras import layers\n",
+        "\n",
+        "model = models.Sequential()\n",
+        "model.add(layers.Dense(32, activation='relu', input_shape=(784,)))\n",
+        "model.add(layers.Dense(10, activation='softmax'))\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mAvkUJj7E-2S",
+        "colab_type": "text"
+      },
+      "source": [
+        "And the same model using the functional API:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RoOpBpnrFEVI",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "input_tensor = layers.Input(shape=(784,))\n",
+        "x = layers.Dense(32, activation='relu')(input_tensor)\n",
+        "\n",
+        "output_tensor = layers.Dense(10, activation='softmax') (x)\n",
+        "model = models.Model(inputs=input_tensor, outputs=output_tensor)\n",
+        "\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "K_yYOouBGr0F",
+        "colab_type": "text"
+      },
+      "source": [
+        "With the functional API, you're maniplating the data tensors that the model proccesses and applying layers to this tensor as if they were functions."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vKGXgbs2HHcs",
+        "colab_type": "text"
+      },
+      "source": [
+        "Once your model architectre is defined, it doesn't matter whether you used a *Sequential* model or the functional API."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dKSsV5S3HV-f",
+        "colab_type": "text"
+      },
+      "source": [
+        "The learning process is configured in the compilation step, where you specify the optimizer and loss function(s) that the model should use, as well as the metrics to monitor during training."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BTSF3nTgHtnX",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "from keras import optimizers\n",
+        "\n",
+        "model.compile(optimizer=optimizers.RMSprop(lr=0.001),\n",
+        "loss='mse',\n",
+        "metrics=['accuracy'])\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-eF_CTn_ISX8",
+        "colab_type": "text"
+      },
+      "source": [
+        "Finally, the learning process consists of passing Numpy arrays of input data ( and the corresponding target data) to the model via the fit() method, similar to what you would do in SciKit-Learn."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lP5qEdG4IupH",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "model.fit(input_tensor, target_tensor, batch_size=128, epochs=10)\n",
+        "```"
       ]
     }
   ]
