--- a/Chapter3_Getting_started_with_neural_networks.ipynb
+++ b/Chapter3_Getting_started_with_neural_networks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter3_Getting_started_with_neural_networks.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNrT7p8oNimkcNGbbYA2Mv6",
+      "authorship_tag": "ABX9TyOVhWrujzHzQiTxWCo104YF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -445,7 +445,441 @@
       "source": [
         "```\n",
         "model.fit(input_tensor, target_tensor, batch_size=128, epochs=10)\n",
+        "\n",
         "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "J1rb1cc7MsTJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "#3.4 Classifying movie reviews: a binary classification example"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "32MgITYLNB1L",
+        "colab_type": "text"
+      },
+      "source": [
+        "Two-class classification, or binary classifictaion, may be the most widely applied kind of machine-learning problem. In this example, you'll learn to classify movie reviews as positive or negative, based on the text contents of the reviews.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "l2bTt0znRZx5",
+        "colab_type": "text"
+      },
+      "source": [
+        "#3.4.1 The IMDB dataset"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Pny_vNOFRfKu",
+        "colab_type": "text"
+      },
+      "source": [
+        "You'll work with th IMDB dataset: as set of 50,000 highly polarized reviews from the Internet Movie Database. They're split into 25,000 reviews for training and 25,000 reviews for testing, each set consisting of 50% negative and 50% positive reviews."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yPlfB_6wUHWN",
+        "colab_type": "text"
+      },
+      "source": [
+        "Why use separate training and test sets? Because you should never test a machine learning model on the same data you used to train it! Just because a model performs well on its training data doesn't mean it will perform well on data it has never seen; and what you care about is your model's performance on new data."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "98-T_OwtVD2V",
+        "colab_type": "text"
+      },
+      "source": [
+        "The following code will load the dataset."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "33ngwhDoNF4a",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "9fe5fce8-c024-4c4a-dea5-d965f8c0bc42"
+      },
+      "source": [
+        "from keras.datasets import imdb\n",
+        "\n",
+        "(train_data, train_labels),  (test_data, test_labels) = imdb.load_data(num_words=10000)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://s3.amazonaws.com/text-datasets/imdb.npz\n",
+            "17465344/17464789 [==============================] - 0s 0us/step\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "R7buJtq6Nmf9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "a7edec92-1b3f-46a6-bfb4-5618af71caec"
+      },
+      "source": [
+        "train_data[0]"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1,\n",
+              " 14,\n",
+              " 22,\n",
+              " 16,\n",
+              " 43,\n",
+              " 530,\n",
+              " 973,\n",
+              " 1622,\n",
+              " 1385,\n",
+              " 65,\n",
+              " 458,\n",
+              " 4468,\n",
+              " 66,\n",
+              " 3941,\n",
+              " 4,\n",
+              " 173,\n",
+              " 36,\n",
+              " 256,\n",
+              " 5,\n",
+              " 25,\n",
+              " 100,\n",
+              " 43,\n",
+              " 838,\n",
+              " 112,\n",
+              " 50,\n",
+              " 670,\n",
+              " 2,\n",
+              " 9,\n",
+              " 35,\n",
+              " 480,\n",
+              " 284,\n",
+              " 5,\n",
+              " 150,\n",
+              " 4,\n",
+              " 172,\n",
+              " 112,\n",
+              " 167,\n",
+              " 2,\n",
+              " 336,\n",
+              " 385,\n",
+              " 39,\n",
+              " 4,\n",
+              " 172,\n",
+              " 4536,\n",
+              " 1111,\n",
+              " 17,\n",
+              " 546,\n",
+              " 38,\n",
+              " 13,\n",
+              " 447,\n",
+              " 4,\n",
+              " 192,\n",
+              " 50,\n",
+              " 16,\n",
+              " 6,\n",
+              " 147,\n",
+              " 2025,\n",
+              " 19,\n",
+              " 14,\n",
+              " 22,\n",
+              " 4,\n",
+              " 1920,\n",
+              " 4613,\n",
+              " 469,\n",
+              " 4,\n",
+              " 22,\n",
+              " 71,\n",
+              " 87,\n",
+              " 12,\n",
+              " 16,\n",
+              " 43,\n",
+              " 530,\n",
+              " 38,\n",
+              " 76,\n",
+              " 15,\n",
+              " 13,\n",
+              " 1247,\n",
+              " 4,\n",
+              " 22,\n",
+              " 17,\n",
+              " 515,\n",
+              " 17,\n",
+              " 12,\n",
+              " 16,\n",
+              " 626,\n",
+              " 18,\n",
+              " 2,\n",
+              " 5,\n",
+              " 62,\n",
+              " 386,\n",
+              " 12,\n",
+              " 8,\n",
+              " 316,\n",
+              " 8,\n",
+              " 106,\n",
+              " 5,\n",
+              " 4,\n",
+              " 2223,\n",
+              " 5244,\n",
+              " 16,\n",
+              " 480,\n",
+              " 66,\n",
+              " 3785,\n",
+              " 33,\n",
+              " 4,\n",
+              " 130,\n",
+              " 12,\n",
+              " 16,\n",
+              " 38,\n",
+              " 619,\n",
+              " 5,\n",
+              " 25,\n",
+              " 124,\n",
+              " 51,\n",
+              " 36,\n",
+              " 135,\n",
+              " 48,\n",
+              " 25,\n",
+              " 1415,\n",
+              " 33,\n",
+              " 6,\n",
+              " 22,\n",
+              " 12,\n",
+              " 215,\n",
+              " 28,\n",
+              " 77,\n",
+              " 52,\n",
+              " 5,\n",
+              " 14,\n",
+              " 407,\n",
+              " 16,\n",
+              " 82,\n",
+              " 2,\n",
+              " 8,\n",
+              " 4,\n",
+              " 107,\n",
+              " 117,\n",
+              " 5952,\n",
+              " 15,\n",
+              " 256,\n",
+              " 4,\n",
+              " 2,\n",
+              " 7,\n",
+              " 3766,\n",
+              " 5,\n",
+              " 723,\n",
+              " 36,\n",
+              " 71,\n",
+              " 43,\n",
+              " 530,\n",
+              " 476,\n",
+              " 26,\n",
+              " 400,\n",
+              " 317,\n",
+              " 46,\n",
+              " 7,\n",
+              " 4,\n",
+              " 2,\n",
+              " 1029,\n",
+              " 13,\n",
+              " 104,\n",
+              " 88,\n",
+              " 4,\n",
+              " 381,\n",
+              " 15,\n",
+              " 297,\n",
+              " 98,\n",
+              " 32,\n",
+              " 2071,\n",
+              " 56,\n",
+              " 26,\n",
+              " 141,\n",
+              " 6,\n",
+              " 194,\n",
+              " 7486,\n",
+              " 18,\n",
+              " 4,\n",
+              " 226,\n",
+              " 22,\n",
+              " 21,\n",
+              " 134,\n",
+              " 476,\n",
+              " 26,\n",
+              " 480,\n",
+              " 5,\n",
+              " 144,\n",
+              " 30,\n",
+              " 5535,\n",
+              " 18,\n",
+              " 51,\n",
+              " 36,\n",
+              " 28,\n",
+              " 224,\n",
+              " 92,\n",
+              " 25,\n",
+              " 104,\n",
+              " 4,\n",
+              " 226,\n",
+              " 65,\n",
+              " 16,\n",
+              " 38,\n",
+              " 1334,\n",
+              " 88,\n",
+              " 12,\n",
+              " 16,\n",
+              " 283,\n",
+              " 5,\n",
+              " 16,\n",
+              " 4472,\n",
+              " 113,\n",
+              " 103,\n",
+              " 32,\n",
+              " 15,\n",
+              " 16,\n",
+              " 5345,\n",
+              " 19,\n",
+              " 178,\n",
+              " 32]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ULKLwbx1Nw18",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "05cb94af-d652-4468-c421-581d4784b998"
+      },
+      "source": [
+        "train_labels[0]"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T48W4vZkN1v7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "f19d34d3-a24d-4445-eb9d-a110d3d08c46"
+      },
+      "source": [
+        "max([max(sequence) for sequence in train_data])"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9999"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aKiXR2NuOcxQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "3a4a080b-3a9b-4665-ed30-d2cbfbd3736b"
+      },
+      "source": [
+        "word_index = imdb.get_word_index()\n",
+        "reverse_word_index = dict([(value, key) for (key, value) in word_index.items()])\n",
+        "decoded_review = ' '.join(\n",
+        "    [reverse_word_index.get(i - 3, '?') for i in train_data[0]]\n",
+        ")"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://s3.amazonaws.com/text-datasets/imdb_word_index.json\n",
+            "1646592/1641221 [==============================] - 0s 0us/step\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
