--- a/Chapter3_Getting_started_with_neural_networks.ipynb
+++ b/Chapter3_Getting_started_with_neural_networks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter3_Getting_started_with_neural_networks.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOVhWrujzHzQiTxWCo104YF",
+      "authorship_tag": "ABX9TyNQvPCVfvpAviXU0I0go4Zi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -543,6 +543,26 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9Mt8LIwAWF4f",
+        "colab_type": "text"
+      },
+      "source": [
+        "The argument num_words=10000 means you'll only keep the top 10,000 most frequently occurring words in the training data. Rare words will be discarded. This allows you to work with vector data of manageable size."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "l6VJ4Fq8XNwT",
+        "colab_type": "text"
+      },
+      "source": [
+        "The variables train_data and test_data are lists of reviews; each review is a list of word indices(encoding a sequence of words). train_labels and test_labels are lists of 0s and 1s, where 0 stands for *negative* and 1 stands for *positive*."
       ]
     },
     {
