--- a/Chapter3_Getting_started_with_neural_networks.ipynb
+++ b/Chapter3_Getting_started_with_neural_networks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter3_Getting_started_with_neural_networks.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNQvPCVfvpAviXU0I0go4Zi",
+      "authorship_tag": "ABX9TyP2WUpzpK9M3f0QOHgiuFEP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -900,6 +900,144 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4wAv6SW0fShE",
+        "colab_type": "text"
+      },
+      "source": [
+        "#3.4.2 Preparing the data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7C1Ia3gofVx3",
+        "colab_type": "text"
+      },
+      "source": [
+        "You can't feed lists of integers into a neural networks. You have to turn your lists into tensors. There are two ways to do that:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z8kbHXcbfiYG",
+        "colab_type": "text"
+      },
+      "source": [
+        "* Pad your lists so that they all have the same length, turn them into an integer tensor of shape (samples, word_indices), and then use as the first layer in your network a layer capable of handling such integer tensors ( the Embedding layer, which we'll cover in detail later in the book).\n",
+        "\n",
+        "* One-hot encode your lists to turn them into vectors of 0s and 1s. This would mean, for instance, turning the sequence [3, 5] into a 10,000-dimensional vector that would be all 0s except for indices 3 and 5, which would be 1s. Then you could use as the first layer in your network a *Dense* layer, capable of handling floating-point vector data."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0rvsM0jYhqVk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def vectorize_sequences(sequences, dimension=10000):\n",
+        "    results = np.zeros((len(sequences), dimension))\n",
+        "    for i, sequence in enumerate(sequences):\n",
+        "        results[i, sequence] = 1\n",
+        "    return results\n",
+        "\n",
+        "x_train = vectorize_sequences(train_data)\n",
+        "x_test = vectorize_sequences(test_data)"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Lfybgc35jJSu",
+        "colab_type": "text"
+      },
+      "source": [
+        "What the samples look like now:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-fhTr1WzjNWy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "9ebcfa3d-193d-4ced-c568-6aed765dd629"
+      },
+      "source": [
+        "x_train[0]"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0., 1., 1., ..., 0., 0., 0.])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2a3eflPkjSx5",
+        "colab_type": "text"
+      },
+      "source": [
+        "We should also vectorize the lables:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ORTgIZiQjZjO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "y_train = np.array(train_labels).astype('float32')\n",
+        "y_test = np.array(test_labels).astype('float32')"
+      ],
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GVSYy74hjtRh",
+        "colab_type": "text"
+      },
+      "source": [
+        "No we can build our network."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Q32mNdGDjxyA",
+        "colab_type": "text"
+      },
+      "source": [
+        "#3.4.3 Building your network"
       ]
     }
   ]
