--- a/Chapter3_Getting_started_with_neural_networks.ipynb
+++ b/Chapter3_Getting_started_with_neural_networks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter3_Getting_started_with_neural_networks.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP2WUpzpK9M3f0QOHgiuFEP",
+      "authorship_tag": "ABX9TyNDjWT9P2TpK+ICdH2EXFmn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1038,6 +1038,147 @@
       },
       "source": [
         "#3.4.3 Building your network"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "P8tw4lm8l6Kw",
+        "colab_type": "text"
+      },
+      "source": [
+        "The input data is vectors, and the labels are scalars(1s and 0s): this is the easiest setup you'll ever encounter. A type of network that performs well on such a problem is a simple stack of fully connected (Dense) layers with *relu* activations: Dense(16,activation='relu').\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oigAEFNimek8",
+        "colab_type": "text"
+      },
+      "source": [
+        "The argument being passed to each Dense layer (16) is the number of hidden units of the layer. A *hidden unit* is a dimension in the representation space of the layer. You may remember from chapter 2 that each *Dense* layer with a relu activation implements the following chain of tensor operations:\n",
+        "```\n",
+        "output = relu(dot(W, input) + b)\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "U0MZxHIonRSI",
+        "colab_type": "text"
+      },
+      "source": [
+        "Having 16 hidden units means the weight matrix *W* will have shape(input_dimension, 16): the dot product with *W* will project the input data onto a 16-dimensional representation space. You can intuitively understand the dimensionality of your representation space as \"how much freedom you're allowing the network to have when learning the internal representations.\""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "282Wy18toNp6",
+        "colab_type": "text"
+      },
+      "source": [
+        "There are two key architecture decisions to be made about such a stack of *Dense* layers:\n",
+        "\n",
+        "* How many layers to use\n",
+        "* How many hidden units to choose for each layer"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DgQ8IL9VolSp",
+        "colab_type": "text"
+      },
+      "source": [
+        "More on this in chapter 4 we will us the following architecture:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pIDYowA1otfg",
+        "colab_type": "text"
+      },
+      "source": [
+        "* Two intermediate layers with 16 hidden units each\n",
+        "* A third layer that will output the scalar prediction regarding the sentiment of the current review."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AHmu1WToqwiu",
+        "colab_type": "text"
+      },
+      "source": [
+        "The intermediate layers will use *relu* as their activation function, and the final layer will use a sigmoid activation so as to output a probability (a score between 0 and 1, indicating how likely the sample is to have the target \"1\": how likely the review is to be positive). A *relu* (rectified linear unit) is a function meant ot zero out negative values whereas a sigmoid \"squashes\" arbitrary values into the [0, 1] interval, outputting something that can be interpreted as a probability."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "El2_IwpPr0-D",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from keras import models\n",
+        "from keras import layers\n",
+        "\n",
+        "model = models.Sequential()\n",
+        "model.add(layers.Dense(16, activation='relu', input_shape=(10000,)))\n",
+        "model.add(layers.Dense(16, activation='relu'))\n",
+        "model.add(layers.Dense(1, activation='sigmoid'))"
+      ],
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "74k3nlv2stwa",
+        "colab_type": "text"
+      },
+      "source": [
+        "It is key to you use an activation function as it allows for non-linear transformations of the hypothesis space. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7gh3BvGNs8bU",
+        "colab_type": "text"
+      },
+      "source": [
+        "Finally, we choose a loss function and an optimizer. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LAAr7iLntIts",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model.compile(optimizer='rmsprop',\n",
+        "              loss='binary_crossentropy',\n",
+        "              metrics=['accuracy'])"
+      ],
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "80B8uQQzvRlb",
+        "colab_type": "text"
+      },
+      "source": [
+        "#3.4.4 Validating your approach"
       ]
     }
   ]
